syntax = "proto3";

package services;

// User Service
service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetAllUsers(Empty) returns (GetAllUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetAllProducts(Empty) returns (GetAllProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse);
}

// User Messages
message GetUserRequest {
  int32 id = 1;
}
message GetUserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  string created_at = 6;
  string updated_at = 7;
}
message CreateUserRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string address= 4;
}
message CreateUserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  string created_at = 6;
  string updated_at = 7;
}
message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
}
message UpdateUserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  string message = 6;
  string updated_at = 8;
}
message DeleteUserRequest {
  int32 id = 1;
}
message DeleteUserResponse {
  string message = 1;
}
message GetAllUsersResponse {
  repeated GetUserResponse users = 1;
}

// Auth Messages
message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  GetUserResponse user = 3;
  string message = 4;
}
message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  string address = 5;
}
message RegisterResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  string message = 6;
}
message ValidateTokenRequest {
  string token = 1;
}
message ValidateTokenResponse {
  bool valid = 1;
  GetUserResponse user = 2;
  string message = 3;
}
message RefreshTokenRequest {
  string refresh_token = 1;
}
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  string message = 3;
}
message LogoutRequest {
  string token = 1;
}
message LogoutResponse {
  string message = 1;
}

// Product Messages
message GetProductRequest {
  int32 id = 1;
}
message GetProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category = 6;
  string image_url = 7;
  string created_at = 8;
  string updated_at = 9;
}
message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
  string category = 5;
  string image_url = 6;
}
message CreateProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category = 6;
  string image_url = 7;
  string message = 8;
  string created_at = 9;
}
message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category = 6;
  string image_url = 7;
}
message UpdateProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category = 6;
  string image_url = 7;
  string message = 8;
  string updated_at = 9;
}
message DeleteProductRequest {
  int32 id = 1;
}
message DeleteProductResponse {
  string message = 1;
}
message GetAllProductsResponse {
  repeated GetProductResponse products = 1;
}
message SearchProductsRequest {
  string query = 1;
  string category = 2;
  double min_price = 3;
  double max_price = 4;
  int32 page = 5;
  int32 limit = 6;
}
message SearchProductsResponse {
  repeated GetProductResponse products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message Empty {}
